# AP1--Ex5

./: CMakeLists.txt  Code Taken Out.txt  README.md
cmake-build/: CMakeCache.txt
exe/: a.outclient  a.outserver
src/client/: Client.cpp  Client.h
src/display/: Display.cpp  Display.h
src/easy_logging/: easylogging++.h
src/game/board/: Board.cpp  Board.h  Cell.h  CellIndex.cpp  CellIndex.h
src/game/game_flow/: Reversi.cpp  Reversi.h
src/game/game_logic/: MovesEvaluator.cpp  MovesEvaluator.h  TurnsManager.cpp  TurnsManager.h
src/game/players/: AI.cpp  AI.h  Participant.cpp  Participant.h  Player.cpp  Player.h
src/game/utilities/: GameUtilities.cpp  GameUtilities.h
src/main/: client_main.cpp  server_main.cpp
src/make/: BackUp makefile  client.out  makefile  server.out  sources.txt
src/make/client_side/: a.out  makefile
src/server/: IClient.h
src/server/controller/: Controller.cpp  Controller.h  IGameEventHandler.h
src/server/controller/commands/: ICommand.h  ServerCommand.h
src/server/controller/commands/command_list/: CloseCommand.cpp  CloseCommand.h  JoinCommand.cpp  JoinCommand.h  ListCommand.cpp  ListCommand.h  PlayCommand.cpp  PlayCommand.h  StartCommand.cpp  StartCommand.h
src/server/model/: IModel.h  Model.cpp  Model.h
src/server/model/game_manager/: GameManager.cpp  GameManager.h  IGameContainer.h  IGameManager.h  ListGameContainer.cpp  ListGameContainer.h
src/server/model/requests/: CloseRequest.cpp  CloseRequest.h  IRequest.h  JoinRequesst.cpp  JoinRequest.h  PlayRequest.cpp  PlayRequest.h  StartRequest.cpp  StartRequest.h
src/server/model/reversi_game/: ReversiGame.cpp  ReversiGame.h  ReversiGameEvent.cpp  ReversiGameEvent.h  ReversiGamePlayer.cpp  ReversiGamePlayer.h
src/server/model/reversi_game/generator/: IGameGenerator.h  ReversiGameGenerator.cpp  ReversiGameGenerator.h
src/server/model/reversi_game_manager/: IReversiGameManager.h  ReversiGameManager.cpp  ReversiGameManager.h
src/server/server_side/: Server.cpp  Server.h
src/server/thread_pool/: PoolWorkerThread.cpp  PoolWorkerThread.h  Task.h  Thread.cpp  Thread.h  ThreadPool.cpp  ThreadPool.h  WorkQueue.cpp  WorkQueue.h
src/server/thread_pool/tasks/: ClientTask.cpp  ClientTask.h  ServerTask.cpp  ServerTask.h
src/server/view/: ClientHandler.cpp  ClientHandler.h  IClientHandler.h  IClientNotifier.h  ServerClient.cpp  ServerClient.h
src/shared_data/: CommandResult.cpp  CommandResult.h  Message.cpp  Message.h  MoveUpdate.cpp  MoveUpdate.h  Notification.cpp  Notification.h
src/shared_data/utility/: StringSerializing.cpp  StringSerializing.h
